--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.6",
     "@tailwindcss/postcss": "^4.1.3",
+    "angularx-qrcode": "^19.0.0",
     "dalves": "file:",
     "express": "^4.18.2",
+    "hammerjs": "^2.0.8",
     "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.3",
